fixed double tap zoom on ios

--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@
 }
 
 .dpad-button{
+    touch-action: manipulation;
     display: flexbox;
     background-color: #353434;
     color: #ffffff;
